--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,12 +12,12 @@
         <h2>Facebook Open Source</h2>
       </div>
       <div class="footerSection">
-        <a class="footerLink" href="https://code.facebook.com/projects/" target="_blank">Open Source Projects</a>
+        <a class="footerLink" href="https://code.facebook.com/projects/" target="_blank">开源项目</a>
         <a class="footerLink" href="https://github.com/facebook/" target="_blank">GitHub</a>
         <a class="footerLink" href="https://twitter.com/fbOpenSource" target="_blank">Twitter</a>
       </div>
       <div class="footerSection rightAlign">
-        <a class="footerLink" href="https://github.com/{{ site.ghrepo }}" target="_blank">Contribute to this project on GitHub</a>
+        <a class="footerLink" href="https://github.com/{{ site.ghrepo }}" target="_blank">帮助我们翻译</a>
       </div>
     </div>
   </div>
