--- a/_includes/post.html
+++ b/_includes/post.html
@@ -10,7 +10,7 @@
     <p class="post-authorName">{{ author.full_name }}</p>
     {% endif %}
     <h1 class="post-title">{% if include.truncate %}<a href="{{ page.url | absolute_url }}">{{ page.title }}</a>{% else %}{{ page.title }}{% endif %}</h1>
-    <p class="post-meta">Posted {{ page.date | date: '%B %d, %Y' }}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <p class="post-meta">发布于 {{ page.date | date: "%Y 年 %-m 月 %-d 日" }}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
   <article class="post-content">
